# SyntheticStrainImage

./: README.md
ConvertSurfaces/: CMakeLists.txt  ConvertSurfaces.cpp
StrainCompare/: CMakeLists.txt  StrainCompare.cpp
StrainCompare-InputTransform/: CMakeLists.txt  StrainCompare-InputTransform.cpp
lib/CompareSurfaces/: CompareSurfaces.cpp  CompareSurfaces.h
lib/CompareSurfaces-InputTransform/: CompareSurfaces-InputTransform.cpp  CompareSurfaces-InputTransform.h
lib/ReadDaVis/: ReadDaVis.cpp  ReadDaVis.h
